# Gravity-

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements-scale.txt  requirements.txt
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/src/: anchor_registry.rs  claim_score_anchor.rs  equation_proof_anchor.rs  lib.rs  merkle_anchor.rs
docs/: index.html
k8s/: api-deployment.yml  infrastructure.yml  namespace.yml  worker-deployment.yml
scaling/: __init__.py  api.py  config.py  db_migration.py  prometheus.yml  worker_pool.py
src/: __init__.py  config.py  database.py  logger.py
src/analyzers/: pdf_analyzer.py
src/collectors/: base_scraper.py  reddit_scraper.py  wayback_scraper.py  web_search_scraper.py
src/crossref/: academic_records.py  government_records.py  research_sources.py
src/crypto/: __init__.py  rust_anchor_bridge.py  signature_manager.py
src/dashboard/: dashboard.py
src/foia/: __init__.py  document_forensics.py  foia_ingester.py
src/graph/: alert_engine.py  citation_density.py  claim_graph.py  claim_scoring_report.py  confidence_scorer.py  confidence_timeline.py  contradiction_analyzer.py  coordination_detector.py  drift_kinematics.py  entropy_trend.py  influence_network.py  lifecycle_report.py  mutation_entropy.py  propagation_graph.py  propagation_tracker.py  provenance_deep.py  source_forensics_report.py  (+2 more)
tests/: test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7_anchor.py  test_phase7_math.py  test_phase7_performance.py  test_phase7_registry.py  test_physics.py
(+37 files in other folders)
